--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <span class="close-cart position-absolute top-0 end-0 m-2" style="cursor: pointer;">&times;</span>
     <div class="cart-items mt-3"></div>
     <div id="total-price" class="fw-bold text-end mt-3">Total: $0.00</div>
+    <button id="btn-pagar" class="btn btn-success w-100 mt-3">Finalizar Compra</button>
   </div>
 </div>
 
