Nuevos Cambios Front

--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <!-- Logo -->
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img class="imgNav1 m-0 p-0" src="img/BLODECON-logo-removebg.png" alt="Logo de la empresa" style="height: 50px;">
+      </a>
      <!-- Sidebar -->
   <div class="sidebar">
     <a onclick="mostrarSeccion('productos')">Productos</a>
@@ -40,6 +44,7 @@
       </div>
     </div>
   </div>
+  <script src="js/checkAdmin.js"></script>
 <script src="js/admin.js"></script>
 </body>
 </html>
