--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 <div class="contenido">
-  <nav class="navbar navbar-expand-md bg-warning p-0 mb-3 shadow">
+   <nav class="navbar navbar-expand-md bg-warning p-0 mb-3 shadow position-fixed top-0 start-0 w-100" style="z-index: 1050;">
+
     <div class="container-fluid">
 
       <!-- Logo -->
@@ -44,7 +45,7 @@
   </ul>
 
   <!-- Íconos juntos: usuario y carrito -->
-  <div class="d-flex align-items-center ms-auto me-3 gap-3"> <!-- Se usa gap para separar suavemente los íconos -->
+  <div class="d-flex align-items-center ms-auto me-3 gap-3">
     <!-- Ícono usuario -->
    <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="cuenta" viewBox="0 0 16 16">
       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
@@ -63,14 +64,14 @@
 </div>
   </nav>
 
-  <!-- Dropdown del carrito -->
-  <div class="cart-dropdown bg-white shadow p-3 rounded position-absolute" style="display: none; right: 10px; top: 70px; z-index: 1000; width: 300px;">
+  <!-- carrito -->
+  <div class="cart-dropdown bg-white shadow p-3 rounded position-fixed" style="display: none; right: 10px; top: 70px; z-index: 1000; width: 300px;">
     <p class="fw-bold text-center">BOLSA DE COMPRAS</p>
     <div class="empty text-center text-muted">Tu carrito está vacío :(</div>
     <span class="close-cart position-absolute top-0 end-0 m-2" style="cursor: pointer;">&times;</span>
     <div class="cart-items mt-3"></div>
     <div id="total-price" class="fw-bold text-end mt-3">Total: $0.00</div>
-    <button id="btn-pagar" class="btn btn-success w-100 mt-3">Finalizar Compra</button>
+     <button id="btn-pagar" class="btn btn-dark w-100 mt-3">Finalizar Compra</button>
   </div>
 </div>
 
